# ai-integration

./: .gitmodules  CHANGELOG.md  Cargo.toml  NOTE.md  README.md  build.rs  source
src/: ai.rs  aurascript.rs  config.rs  default-prompt.md  help.rs  lib.rs  main.rs  modules.rs  prompt.rs  test-prompt.txt  utils.rs
src/modules/: agent.rs  aurascript.rs  chat.rs  cli.rs  default-prompt.md  prompt.rs  tui.rs
src/modules/agent/: api.rs  default-prompt.md  tools.rs
src/modules/agent/api/: gemini.rs  ollama.rs  openai.rs
src/modules/agent/tools/: files.rs  shell.rs  utils.rs  www.rs
src/modules/agent/tools/files/: info.rs  read.rs  write.rs
src/modules/agent/tools/utils/: weather.rs
src/modules/agent/tools/www/: browse.rs  search.rs
src/modules/chat/: api.rs  cli.rs  tui.rs
src/modules/chat/api/: search.rs
src/modules/chat/interface/: cli.rs
src/utils/: ai_print.rs  debugger.rs  w3m.rs  xml_editor.rs
