[package]
name = "ai-integration"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
html2md = "0.2.15"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shlex = "1.3.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
urlencoding = "2.1.3"
yaml-rust = "0.4.5"
